<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">Yamblz.Weather</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!--Date strings -->
    <string name="today">Today</string>
    <string name="tomorrow">Tomorrow</string>
    <string name="format_full_friendly_date"><xliff:g id="month">%1$s</xliff:g>, <xliff:g id="day">%2$s</xliff:g></string>

    <!--Drawer strings-->
    <string name="drawer_home">Weather</string>
    <string name="drawer_change_city">Select place</string>
    <string name="drawer_settings">Settings</string>
    <string name="drawer_about_app">About</string>

    <!--Details strings-->
    <string name="details_humidity">Humidity</string>
    <string name="details_wind_speed">Wind Speed</string>
    <string name="details_pressure">Pressure</string>

    <!--Home strings-->
    <string name="home_toolbar_title">Overview</string>
    <string name="home_network_error">Network error. Please try again.</string>
    <string name="home_remove_from_fav_error">Failed to remove. Please try again.</string>

    <!--Suggest strings-->
    <string name="suggest_toolbar_title">Select your location</string>
    <string name="suggest_edit_text_hint">Type any place</string>
    <string name="suggest_error_message">Oops, something went wrong :( Please try again.</string>

    <!--Settings strings -->
    <string name="settings_toolbar_title">Settings</string>
    <string name="settings_update_switch">Background update</string>
    <string name="settings_update_interval">Update interval</string>
    <string name="settings_units">Units</string>
    <string name="settings_units_temperature_title">Temperature</string>
    <string name="settings_units_wind_speed_title">Wind Speed</string>
    <string name="settings_units_pressure_title">Pressure</string>

    <!--About strings-->
    <string name="about_toolbar_title">About</string>
    <string name="about_app_name">Yamblz.Weather</string>
    <string name="about_version">Version 1.0</string>

    <string name="minutes_15">15 minutes</string>
    <string name="minutes_30">30 minutes</string>
    <string name="hour_1">1 hour</string>
    <string name="hour_3">3 hour</string>
    <string name="hour_6">6 hour</string>
    <string name="hour_12">12 hour</string>
    <string name="hour_24">24 hour</string>

    <string name="percent" translatable="false">%d%%</string>
    <string name="degree" translatable="false">%d°</string>

    <!-- Units temperature description-->
    <string name="celsius" translatable="false">°C</string>
    <string name="fahrenheit" translatable="false">°F</string>

    <!-- Units wind speed description -->
    <string name="meters">M/S</string>
    <string name="kilometers">Km/H</string>
    <string name="miles">Mph</string>
    <string name="knots">Knots</string>

    <!--Units pressure description-->
    <string name="hPa">hPa</string>
    <string name="mbar">mBar</string>

</resources>
