<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <!--<group-->
        <!--android:id="@+id/menu_top"-->
        <!--android:checkableBehavior="single">-->
        <!--<item-->
            <!--android:id="@+id/nav_home"-->
            <!--android:icon="@drawable/ic_wb_sunny_black_24dp"-->
            <!--android:title="@string/drawer_home"/>-->
    <!--</group>-->
    <group
        android:id="@+id/menu_bottom"
        android:checkableBehavior="none">
        <item
            android:id="@+id/nav_change_city"
            android:icon="@drawable/ic_location_on_black_24dp"
            android:title="@string/drawer_change_city"/>
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings_black_24dp"
            android:title="@string/drawer_settings" />
        <item
            android:id="@+id/nav_about_app"
            android:icon="@drawable/ic_info_black_24dp"
            android:title="@string/drawer_about_app" />
    </group>

</menu>
